# AppleWin-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: apple-sign.yml  ci.yml  release.yml
crates/apple2-audio/: Cargo.toml
crates/apple2-audio/src/: ay8910.rs  lib.rs  speaker.rs  ssi263.rs  wav_writer.rs
crates/apple2-core/: Cargo.toml
crates/apple2-core/src/: bus.rs  bus_tests.rs  card.rs  disk_util.rs  emulator.rs  error.rs  lib.rs  model.rs
crates/apple2-core/src/cards/: col80.rs  disk2.rs  fourplay.rs  hd.rs  languagecard.rs  mb_firmware.rs  megaaudio.rs  mockingboard.rs  mod.rs  mouse.rs  noslotclock.rs  phasor.rs  printer.rs  ramworks.rs  sam.rs  saturn.rs  sdmusic.rs  snesmax.rs  ssc.rs  ssi263.rs  uthernet.rs  via6522.rs  vidhd.rs  z80card.rs
crates/apple2-core/src/cpu/: cpu6502.rs  dispatch.rs  flags.rs  mod.rs  tests.rs
crates/apple2-core/src/prodos/: bitmap.rs  create.rs  directory.rs  file.rs  format.rs  mod.rs  types.rs
crates/apple2-core/tests/: iic_boot_trace.rs  integration.rs
crates/apple2-debugger/: Cargo.toml
crates/apple2-debugger/src/: assembler.rs  breakpoint.rs  commands.rs  disasm.rs  display.rs  lib.rs  markup.rs  softswitch.rs  state.rs  symbols.rs  trace.rs  watch.rs  watches.rs
crates/apple2-iigs/: Cargo.toml
crates/apple2-iigs/src/: adb.rs  bram.rs  bus.rs  emulator.rs  ensoniq.rs  fpi.rs  lib.rs  mega2.rs  memory.rs  shadowing.rs  shr.rs  smartport.rs
crates/apple2-iigs/src/cpu65816/: addressing.rs  dispatch816.rs  flags816.rs  instructions.rs  mod.rs  registers.rs  tests.rs
crates/apple2-iigs/tests/: integration.rs  peripherals.rs
crates/apple2-video/: Cargo.toml
crates/apple2-video/src/: framebuffer.rs  lib.rs  ntsc.rs  rgb.rs  video_mode.rs
crates/applewin/: Cargo.toml  build.rs
crates/applewin/src/: config.rs  main.rs
roms/Apple_IIc/: Apple IIc Keyboard ROM - 342-0284-A - Italian.ROM
