[package]
name = "apple2-debugger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Apple II debugger: disassembler, assembler, breakpoints, symbol table"

[dependencies]
apple2-core = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_yaml  = { workspace = true }
