[package]
name = "apple2-video"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Apple II video rendering: NTSC, RGB monitor, framebuffer"

[dependencies]
apple2-core = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
